2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProjectConfiguration.cs: Strongly type
	ParentItem.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: New IsLibraryBasedProjectType
	property consolidates code in base class and allows language
	bindings' GUIs to disable compilation options that shouldn't be
	altered for ASP.NET and Moonlight projects.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/SlnData.cs:
	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs: Properly
	save the product number when converting between msbuild formats.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Use the
	original assembly name as base name for satellite assemblies.

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	Don't try to read an existing db when creating a new temporary one.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom/IType.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs: fixed 'Bug 441061 - Completion
	broken for arrays'.

2008-11-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	Properly read the clr version. It must be assigned to the project in
	addition to assigning to the configurations.

2008-11-03  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Projects.Dom/DomCecilType.cs: fixed 'Bug 440366 - Cannot
	override base methods'.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: Fixed and simplified
	RemoveAllInDirectory.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Delete