@@ -1,3 +1,10 @@
+2008-11-05  Mike Krüger  <mike@icsharpcode.net>
+
+	* MonoDevelop.Projects.Dom/IMethod.cs:
+	* MonoDevelop.Projects.Dom/DomMethod.cs:
+	* MonoDevelop.Projects.Dom/ResolveResult.cs: Fixed bug 'Bug 441671 -
+	Finalisers show up in code completion'.
+
 2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects/DotNetProjectConfiguration.cs: Strongly type
